--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+html, body, html * {
+  font-family: 'Roboto', sans-serif;
+}
 *
 {
     margin:0;
     padding: 0;
-    font-family: consolas;
+    font-family: Roboto;
+    font-weight: 700;
 }
 section {
     position:relative;
@@ -15,16 +20,23 @@ section {
     align-items:center;
 }
 
-section,h3,audio{
-    font-size:1em;
+section,h2,audio{
+    font-size:1.2em;
     color: rgb(255, 255, 255);
-    font-family: console;
+    font-family: 'Roboto';
     text-align: center;
     display: block;
 }
-h2,p{
+h3{
     color:black;
 }
+
+p{
+  color:black;
+  font-family: "Roboto";
+  font-weight: 250;
+}
+
 
 section span{
     position:absolute;
@@ -62,7 +74,7 @@ section span:before{
 }
 .Click-here {
     cursor: pointer;
-    background-image: linear-gradient(190deg, #f83600 0%, #fee140 100%);
+    background-image: linear-gradient(190deg, #0010a3 0%, #0010a3 0%);
     color: #fff;
     width: 180px;
     text-align: center;
@@ -70,10 +82,19 @@ section span:before{
     padding: 18px 0;
     margin: 0 auto;
     transition:background-image 3s ease-in-out;
+    border-color: #0010a3;
+    border-bottom: #0010a3;
+    border-right: #0010a3;
+    font-family: 'Roboto';
+    font-weight: 400;
   }
   .Click-here:hover{
     transition:background-image 3s ease-in-out;
-    background-image: linear-gradient(90deg, #fee140 0%, #f83600 100%);
+    background-image: linear-gradient(90deg, #eeff00df 0%, #eeff00df 10%);
+    border-color: #eeff00df;
+    border-bottom: #eeff00df;
+    border-right: #eeff00df;
+    color:black;
   }
 
   .custom-model-main {
